syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.edu";
option java_outer_classname = "PixKeyManagerGRpc";
option objc_class_prefix = "HLW";

package br.com.zup.edu;

service PixKeyManagerGRpcService {
  rpc cadastrarChave (PixKeyRequest) returns (PixKeyResponse) {}
}
service RemoveKeyManagerGrpcService{
  rpc removerChave (RemoveKeyRequest) returns (RemoveKeyResponse){}
}
enum TipoChave{
  SEM_TIPOCHAVE=0;
  CPF = 1;
  TELEFONECELULAR = 2;
  EMAIL = 3;
  CHAVEALEATORIA = 4;

}

enum TipoConta{
  SEM_TIPOCONTA=0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}


message PixKeyRequest {
  string chave = 1;
  string idPortador = 2;
  TipoChave tipo = 3;
  TipoConta conta = 4;
}

message PixKeyResponse {
  string idPix = 1;
}

message RemoveKeyRequest{
  string pixId = 1;
  string idPortador = 2;
}
message RemoveKeyResponse{
  string pixId=1;
}